# mlx-yolos

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BENCHMARK.md  VALIDATION.md
scripts/: benchmark_inference.py  download_convert_v8.sh  evaluate_coco_pose.py  get_coco_pose_val.sh  validate_yolov8_pose.py
src/mlxyolos/: __init__.py  cli.py
src/mlxyolos/cfg/models/v8/: yolov8-pose.yaml
src/mlxyolos/converters/: __init__.py  ultralytics_pt.py
src/mlxyolos/engine/: __init__.py  model.py  predictor.py  results.py
src/mlxyolos/nn/: __init__.py  tasks.py
src/mlxyolos/nn/modules/: __init__.py  block.py  conv.py  head.py
src/mlxyolos/utils/: __init__.py  ops.py  ops_mlx.py  plotting.py
tests/: test_converter.py  test_letterbox.py  test_ops_mlx.py
