[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-yolos"
version = "0.1.0"
description = "Pure MLX implementation of Ultralytics YOLO models for Apple Silicon"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.10"
keywords = ["yolo", "yolov8", "pose-estimation", "object-detection", "mlx", "apple-silicon"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "mlx>=0.20",
    "numpy>=1.24",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "safetensors>=0.4",
]

[project.optional-dependencies]
convert = [
    "torch>=2.0",
    "ultralytics>=8.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
mlx-yolos = "mlxyolos.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mlxyolos = ["cfg/**/*.yaml"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
