[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-yolos"
version = "0.1.0"
description = "Pure MLX implementation of Ultralytics YOLO models for Apple Silicon"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.10"
keywords = ["yolo", "yolov8", "pose-estimation", "object-detection", "mlx", "apple-silicon"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "mlx>=0.20",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "safetensors>=0.4",
    # cv2 is used for every image-side op: load, letterbox resize, drawing,
    # and saving annotated outputs. We match Ultralytics' val/predict pipeline
    # exactly (`cv2.INTER_LINEAR`, `cv2.copyMakeBorder`) since PIL.BILINEAR
    # produces visibly different pixel grids (~80 % of pixels differ on a
    # 1080×810 → 640×480 downscale of bus.jpg) and the model was trained on
    # the cv2 grid. The `-headless` variant skips the GUI bindings; plain
    # `opencv-python` works too if you already have it installed.
    "opencv-python-headless>=4.7",
]

[project.optional-dependencies]
convert = [
    "torch>=2.0",
    "ultralytics>=8.0",
]
val = [
    # COCO mAP evaluation via the canonical pycocotools.
    "pycocotools>=2.0",
]
benchmark = [
    # Apples-to-apples MLX vs PyTorch (CPU/MPS) timing on COCO val2017.
    # Pulls torch + ultralytics so the same yolov8n-pose weights run on
    # all three backends through their official Python APIs; matplotlib
    # is for the bar-chart export written next to the printed table.
    "torch>=2.0",
    "ultralytics>=8.0",
    "pycocotools>=2.0",
    "matplotlib>=3.7",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
mlx-yolos = "mlxyolos.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mlxyolos = ["cfg/**/*.yaml"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
